added options created using js

--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@
       <div class="form-group">
         <label for="exercise">Exercise:</label>
         <select id="exercise" placeholder="Select exercise">
-          <!-- add function that will render this options from list -->
-          <option value>Select exercise</option>
-          <option value="exercise1">Exercise 1</option>
-          <option value="exercise2">Exercise 2</option>
-          <option value="exercise3">Exercise 3</option>
+          <!-- add function that will render these options from list -->
         </select>
       </div>
 
@@ -145,21 +141,17 @@
       <div class="form-group">
         <label for="exerciseStats">Exercise:</label>
         <select id="exerciseStats" onchange="updateChart()">
-          <!-- add function that will render this options from list -->
-          <option value>Select exercise</option>
-          <option value="exercise1">Exercise 1</option>
-          <option value="exercise2">Exercise 2</option>
-          <option value="exercise3">Exercise 3</option>
+          <!-- add function that will render these options from list -->
         </select>
       </div>
-
-
-      <canvas id="chartContainer"></canvas>
 
     </section>
   </section>
 
-  <script src="functions.js"></script>
+  <script src="functions.js">
+
+        
+  </script>
 </body>
 
 </html>
