--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </div>
 
             <form action="" id="logExercise">
+                <h2>Log Your Results!</h2>
                 <!-- Exercise selection -->
                 <div class="form-group">
                     <label for="exercise">Exercise:</label>
@@ -82,6 +83,8 @@
 
         <!-- New createWindow -->
         <section class="window" id="createWindow">
+            <h2>Your Routines!</h2>
+
             <div class="form-group">
                 <label for="workoutName">Workout Name:</label>
                 <input type="text" id="workoutName" placeholder="Enter workout name" />
@@ -134,7 +137,7 @@
 
         <!-- Statistics Window -->
         <section class="window" id="statsWindow">
-
+            <h2>Statistics</h2>
             <!-- Arrow LEFT -->
             <div class="arrow arrow-left" onclick="toggleWindow('statsWindow', 'logWindow')">
                 <span></span>
