fixing mobile display

--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
             </div>
 
             <form action="" id="logExercise">
+
                 <h2>Log Your Results!</h2>
                 <!-- Exercise selection -->
                 <div class="form-group">
                     <label for="exercise">Exercise:</label>
                     <select id="exercise" placeholder="Select exercise" autofocus>
-                    <!-- add function that will render these options from list -->
+                    <!-- options are rendered using js -->
                     </select>
                 </div>
     
@@ -123,6 +124,8 @@
                 <!-- options are rendered using js -->
                 </select>
             </div>
+
+            <!-- here is created canvas graph -->
 
         </section>
     </section>
