fixing mobile display

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <!-- Number of Reps -->
                 <div class="form-group">
                     <label for="reps">Reps:</label>
-                    <input type="number" id="reps" placeholder="Enter number of reps"/>
+                    <input type="number" id="reps" placeholder="Enter number of reps" inputmode="numeric"/>
                 </div>
     
                 <!-- Number of Sets -->
