--- a/index.html
+++ b/index.html
@@ -63,18 +63,19 @@
                 </div>
             </form>
 
-
-            <table class="workout-table">
-                <thead>
-                <tr>
-                    <th>Exercise</th>
-                    <th>Reps</th>
-                    <th>Sets</th>
-                    <th>Weight (kg)</th>
-                </tr>
-                </thead>
-                <tbody id="workoutTableBody"></tbody>
-            </table>
+            <div>
+                <table class="workout-table">
+                    <thead>
+                    <tr>
+                        <th>Exercise</th>
+                        <th>Reps</th>
+                        <th>Sets</th>
+                        <th>Weight (kg)</th>
+                    </tr>
+                    </thead>
+                    <tbody id="workoutTableBody"></tbody>
+                </table>
+            </div>
 
             <div class="arrow arrow-right" onclick="toggleWindow('logWindow', 'statsWindow')">
                 <span></span>
