fixed table and clicking on exercises

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <h2>Your Routines!</h2>
             
             <div id="workout-container">
+                <!-- here are all the workouts -->
             </div>
 
             <button onclick="addWorkoutRow()">
