--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workout Logger</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="workouts.css">
 
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -34,7 +33,7 @@
                 <!-- Exercise selection -->
                 <div class="form-group">
                     <label for="exercise">Exercise:</label>
-                    <select id="exercise" placeholder="Select exercise" autofocus>
+                    <select class="exercises" id="exercise" placeholder="Select exercise" autofocus>
                     <!-- options are rendered using js -->
                     </select>
                 </div>
@@ -63,6 +62,7 @@
                 </div>
             </form>
 
+            <!-- table with logged records of workouts -->
             <table class="workout-table">
                 <thead>
                 <tr>
@@ -82,7 +82,7 @@
             </div>
         </section>
 
-        <!-- New createWindow -->
+        <!-- Workouts Window -->
         <section class="window" id="createWindow">
             <h2>Your Routines!</h2>
             
@@ -90,7 +90,7 @@
                 <!-- here are all the workouts -->
             </div>
 
-            <button onclick="addWorkoutRow()">
+            <button id="add-workout-button" onclick="togglePopUp()">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0,0,256,256" width="30px" height="30px" fill-rule="nonzero"><g fill="#4caf50" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal">
                     <g transform="scale(8.53333,8.53333)">
                         <path d="M15,3c-6.627,0 -12,5.373 -12,12c0,6.627 5.373,12 12,12c6.627,0 12,-5.373 12,-12c0,-6.627 -5.373,-12 -12,-12zM21,16h-5v5c0,0.553 -0.448,1 -1,1c-0.552,0 -1,-0.447 -1,-1v-5h-5c-0.552,0 -1,-0.447 -1,-1c0,-0.553 0.448,-1 1,-1h5v-5c0,-0.553 0.448,-1 1,-1c0.552,0 1,0.447 1,1v5h5c0.552,0 1,0.447 1,1c0,0.553 -0.448,1 -1,1z"></path>
@@ -98,6 +98,27 @@
                 </svg>
                 Create Workout
             </button>
+
+            <!-- window to add exercise -->
+            <div id="popup-container">
+                <header>
+                    <h4>Write down your workout!</h4>
+                    <span class="close-btn" onclick="togglePopUp()">
+                        <svg class="svg-icon" style="width: 1em; height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M810.65984 170.65984q18.3296 0 30.49472 12.16512t12.16512 30.49472q0 18.00192-12.32896 30.33088l-268.67712 268.32896 268.67712 268.32896q12.32896 12.32896 12.32896 30.33088 0 18.3296-12.16512 30.49472t-30.49472 12.16512q-18.00192 0-30.33088-12.32896l-268.32896-268.67712-268.32896 268.67712q-12.32896 12.32896-30.33088 12.32896-18.3296 0-30.49472-12.16512t-12.16512-30.49472q0-18.00192 12.32896-30.33088l268.67712-268.32896-268.67712-268.32896q-12.32896-12.32896-12.32896-30.33088 0-18.3296 12.16512-30.49472t30.49472-12.16512q18.00192 0 30.33088 12.32896l268.32896 268.67712 268.32896-268.67712q12.32896-12.32896 30.33088-12.32896z"  />
+                        </svg>
+                    </span>
+                </header>
+                <div class="form-group-pop-up">
+                    <label>Name:</label>
+                    <input type="text" name="workout-name">
+                </div>
+                <div id="exercisesContainer">
+                    <!-- added using js -->
+                </div>
+                <button class="pop-up-button" onclick="addExercise(event)">Add Exercise</button>
+                <button class="pop-up-button" onclick="saveData()">Save</button>
+            </div>
 
             <!-- Arrow RIGHT -->
             <div class="arrow arrow-right" onclick="toggleWindow('createWindow', 'logWindow')">
@@ -120,7 +141,7 @@
             <!-- Exercise Selection -->
             <div class="form-group">
                 <label for="exerciseStats">Exercise:</label>
-                <select id="exerciseStats" onchange="updateChart()">
+                <select class="exercises" id="exerciseStats" onchange="updateChart()">
                 <!-- options are rendered using js -->
                 </select>
             </div>
