change locatime to locale time and date in chart and added clear button fo rrecord

--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                     <tbody id="workoutTableBody"></tbody>
                 </table>
 
+                <button onclick="deleteAllRecords()" class="pop-up-button">
+                    Clear Records
+                </button>
+
                 <div class="arrow arrow-right" onclick="toggleWindow('logWindow', 'statsWindow')">
                     <span></span>
                     <span></span>
