seperate code to different modules

--- a/index.html
+++ b/index.html
@@ -160,8 +160,10 @@
         </footer>
 
         <!-- javascript logic -->
+        <script src="statsWindow.js"></script>
+        <script src="workoutsWindow.js"></script>
+        <script src="logWindow.js"></script>
         <script src="main.js"></script>
-        <script src="workouts.js"></script>
     </body>
 
 </html>
