fixed up desing problems with navigation bar

--- a/index.html
+++ b/index.html
@@ -43,17 +43,25 @@
                             <span class="nav-name">Settings</span>
                         </a>
                     </li>
-                    <div class="indicator"></div>
                 </ul>
             </nav>
             
-            <section class="container">
+            <section class="window-container">
                 <!-- Workouts Window -->
-                <section class="window" id="createWindow">
+                <section class="window" id="routines-window">
                     <h2>Your Routines!</h2>
                     
-                    <div id="workout-container">
+                    <div id="routines-container">
                         <!-- here are all the workouts -->
+                        <div class="routine">
+                            <p class="routine-name">Legs</p>
+                        </div>
+                        <div class="routine">
+                            <p class="routine-name">Arms</p>
+                        </div>
+                        <div class="routine">
+                            <p class="routine-name">Back and Shoulders</p>
+                        </div>
                     </div>
 
                 </section>
